Fix hand hover background overlapping status bar

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -156,7 +156,7 @@ div.hand.kamicha {
 div.draws::before {
   content: "";
   position: absolute;
-  top: calc(-0.25 * var(--tile-size));
+  top: calc(-0.375 * var(--tile-size));
   left: calc(-0.25 * var(--tile-size));
   background: #0f6f2f;
   border-radius: calc(0.25 * var(--tile-size));
@@ -168,12 +168,12 @@ div.calls:hover { z-index: 100; }
 div.tiles:hover::before, div.calls:hover::before {
   content: "";
   position: absolute;
-  top: calc(-0.625 * var(--tile-size));
+  top: calc(-0.375 * var(--tile-size));
   left: calc(-0.125 * var(--tile-size));
   background: #0f6f2f;
   border-radius: calc(0.25 * var(--tile-size));
   width: calc(100% + 0.5 * var(--tile-size));
-  height: calc(100% + 1 * var(--tile-size));
+  height: calc(100% + 0.5 * var(--tile-size));
 }
 /* toimen's hand covers shimo's calls */
 /* but if we lower its z-index, then toimen's calls are covered by kami */
